@@ -298,21 +298,38 @@ public class CoffeeLevels extends StdLibrary implements ExpLevelLibrary
 			mob.phyStats().setLevel(mob.basePhyStats().level());
 		}
 		final CharClass curClass;
-		final int oldClassLevel;
+		final int newClassLevel;
 		synchronized(mob.baseCharStats())
 		{
+
+			int oldClassLevel = mob.baseCharStats().getClassLevel(mob.baseCharStats().getCurrentClass());
+			if((oldClassLevel == 0)&&(!gain))
+			{
+				// if curr class level == 0, try to switch to another class
+				for(int c=mob.baseCharStats().numClasses()-1;c>=0;c--)
+				{
+					final CharClass C = mob.baseCharStats().getMyClass(c);
+					final int lvl = mob.baseCharStats().getClassLevel(C);
+					if(lvl > 0)
+					{
+						oldClassLevel = lvl;
+						mob.baseCharStats().setCurrentClass(C);
+						break;
+					}
+				}
+			}
 			curClass=mob.baseCharStats().getCurrentClass();
-			oldClassLevel = mob.baseCharStats().getClassLevel(curClass);
-			mob.baseCharStats().setClassLevel(curClass,oldClassLevel+(gain?1:-1));
+			newClassLevel = oldClassLevel+(gain?1:-1);
+			mob.baseCharStats().setClassLevel(curClass,newClassLevel);
 		}
 		synchronized(mob.charStats())
 		{
-			mob.charStats().setClassLevel(curClass,oldClassLevel+(gain?1:-1));
+			mob.charStats().setClassLevel(curClass,newClassLevel);
 		}
 		final int classLevel;
 		synchronized(mob.baseCharStats())
 		{
-			classLevel=mob.baseCharStats().getClassLevel(mob.baseCharStats().getCurrentClass());
+			classLevel=mob.baseCharStats().getClassLevel(curClass);
 		}
 		int gained=mob.getExperience()-mob.getExpNextLevel();
 		if(gained<50)
@@ -374,7 +391,7 @@ public class CoffeeLevels extends StdLibrary implements ExpLevelLibrary
 	}
 
 	@Override
-	public void unLevel(final MOB mob)
+	public void unLevel(final MOB mob, final boolean adjustXP)
 	{
 		if((mob.basePhyStats().level()<2)
 		||(CMSecurity.isDisabled(CMSecurity.DisFlag.LEVELS))
@@ -399,16 +416,19 @@ public class CoffeeLevels extends StdLibrary implements ExpLevelLibrary
 		}
 
 		final int level = mob.basePhyStats().level();
-		mob.setExperience(mob.getExperience() - mob.getExpNeededDelevel());
-		final CharClass curClass=mob.baseCharStats().getCurrentClass();
-		final int oldClassLevel=mob.baseCharStats().getClassLevel(curClass);
+		if(adjustXP && (mob.getExperience() >= getLevelExperience(mob, level-2)))
+			mob.setExperience(mob.getExperience() - mob.getExpNeededDelevel());
 		int[] costGains = new int[CostDef.CostType.values().length];
 		if(mob.playerStats() != null)
 			costGains = Arrays.copyOf(mob.playerStats().leveledCostGains(level), costGains.length);
+		final CharClass prevClass=mob.baseCharStats().getCurrentClass();
+		final int prevClassLevel = mob.baseCharStats().getClassLevel(prevClass);
 		doBaseLevelAdjustment(mob,costGains,false);
+		final CharClass curClass=mob.baseCharStats().getCurrentClass();
+		final int oldClassLevel = (curClass == prevClass) ? prevClassLevel : (mob.baseCharStats().getCurrentClassLevel() + 1);
 		int prac2Stat=mob.charStats().getStat(CharStats.STAT_WISDOM);
 		final int maxPrac2Stat=(CMProps.getIntVar(CMProps.Int.BASEMAXSTAT)
-					 +mob.charStats().getStat(CharStats.CODES.toMAXBASE(CharStats.STAT_WISDOM)));
+								+ mob.charStats().getStat(CharStats.CODES.toMAXBASE(CharStats.STAT_WISDOM)));
 		if(prac2Stat>maxPrac2Stat)
 			prac2Stat=maxPrac2Stat;
 		int practiceGain=(int)Math.floor(CMath.div(prac2Stat,6.0))+curClass.getBonusPracLevel();
@@ -427,7 +447,7 @@ public class CoffeeLevels extends StdLibrary implements ExpLevelLibrary
 		mob.recoverPhyStats();
 		mob.recoverCharStats();
 		mob.recoverMaxState();
-		mob.tell(L("^HYou are now a level @x1 @x2^N.\n\r",""+mob.charStats().getClassLevel(mob.charStats().getCurrentClass()),mob.charStats().getCurrentClass().name(mob.charStats().getCurrentClassLevel())));
+		mob.tell(L("^HYou are now a level @x1 @x2^N.\n\r",""+mob.charStats().getClassLevel(curClass),curClass.name(mob.charStats().getCurrentClassLevel())));
 		curClass.unLevel(mob);
 		Ability A=null;
 		final List<Ability> lose=new ArrayList<Ability>();
@@ -492,7 +512,7 @@ public class CoffeeLevels extends StdLibrary implements ExpLevelLibrary
 		{
 			checkAgain=false;
 			final int baseLevel = mob.basePhyStats().level();
-			unLevel(mob);
+			unLevel(mob, false);
 			neededLowest=getLevelExperience(mob, mob.basePhyStats().level()-2);
 			checkAgain = mob.basePhyStats().level() < baseLevel;
 		}
